--- a/style.css
+++ b/style.css
@@ -1,383 +1,2 @@
-.body {
-    background-color: #2A2C2F;
-}
-
-.page {
-    max-width: 1280px;
-    min-width: 320px;
-    margin: 0 auto;
-    color: #FFFFFF;
-    font-family: 'Inter', Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-
-}
-
-.header {
-    display: flex;
-    margin: 0 48px 0;
-    padding: 28px 0 0;
-    max-width: 1184px;
-    width: 100%;
-    justify-content: space-between;
-}
-
-.header__logo {
-    margin-top: 28px;
-    padding: 0;
-    max-width: 176px;
-    height: 52px;
-}
-
-.header__lang-link {
-    margin: 46px 18px 0;
-    padding: 0;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 28px;
-    text-align: right;
-    text-decoration-line: underline;
-    color: #FFFFFF;
-    font-style: normal;
-}
-
-.header__lang-link:nth-of-type(2n) {
-    margin-right: 0;
-    text-decoration-line: none;
-}
-
-.header__lang-links {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    align-items: flex-end;
-    opacity: 1;
-    transition: opacity .25s ease-out;
-}
-
-.header__lang-links:hover {
-    opacity: .8;
-    cursor: pointer;
-}
-
-
-
-
-.lead {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 56px 148px 92px;
-    padding: 0;
-}
-
-.lead__title {
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
-    justify-content: center;
-    color: #FFFFFF;
-    font-style: normal;
-    max-width: calc(100% - 264px);
-    margin: 0 auto;
-    padding: 0 132px 0;
-}
-
-.lead__subtitle {
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
-    text-align: center;
-    justify-content: center;
-    color: #FFFFFF;
-    font-style: normal;
-    max-width: calc(100% - 344px);
-    padding: 0 172px 0;
-    margin: 32px auto 64px;
-}
-
-.lead__image {
-    display: flex;
-    object-fit: cover;
-    margin: 0;
-    padding: 0;
-}
-
-.lead__caption {
-    text-transform: uppercase;
-    margin: 8px 0 0;
-    font-size: 10px;
-    line-height: 14px;
-    font-weight: 400;
-    color: #FFFFFF;
-}
-
-
-.intro {
-    margin: 0 442px 92px 148px;
-    padding: 0;
-}
-
-.intro__title {
-    font-size: 54px;
-    font-weight: 900;
-    line-height: 58px;
-    text-align: left;
-    color: #FFFFFF;
-    font-style: normal;
-    margin: 0;
-    padding: 0;
-
-}
-
-.intro__text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: left;
-    color: #FFFFFF;
-    font-style: normal;
-    margin: 40px 0 33px;
-}
-
-
-
-
-.intro__list {
-    font-style: normal;
-    color: #FFFFFF;
-    list-style-type: none;
-    font-size: 12px;
-    line-height: 18px;
-    font-weight: 400;
-    padding: 0;
-    margin: 0;
-}
-
-
-
-.intro__number {
-    font-weight: 700;
-}
-
-
-
-.photo-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
-    gap: 16px;
-    max-width: calc(100% - 96px);
-    padding: 0;
-    margin: 0 48px 92px;
-}
-
-.photo-grid__item {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-
-
-.places {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 148px;
-}
-
-.place {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min-content, max-content));
-    grid-template-rows: repeat(auto-fit, minmax(min-content, max-content));
-    column-gap: 40px;
-    row-gap: 48px;
-    grid-template-areas: "place__title place__website""place__image place__paragraph";
-    margin-bottom: 80px;
-}
-
-.place__title {
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    color: #FFFFFF;
-    font-style: normal;
-    margin: 0;
-    padding: 0;
-    max-width: min-content;
-}
-
-.place__website {
-    align-self: end;
-}
-
-.place__url-heading {
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: #AAAAAA;
-    font-style: normal;
-    margin: 0 0 12px;
-}
-
-.place__link {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-decoration-line: underline;
-    color: #FFFFFF;
-    font-style: normal;
-    opacity: 1;
-    transition: opacity .25s ease-out;
-}
-
-.place__link:hover {
-    opacity: .8;
-    cursor: pointer;
-
-}
-
-.place__image {
-    max-width: 460px;
-}
-
-.place__paragraphs {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 163%;
-    color: #FFFFFF;
-    font-style: normal;
-    align-self: start;
-}
-
-.place__paragraph {
-    margin: 0 0 26px;
-}
-
-
-
-.cover {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin: 92px 48px;
-    background-image: url(images/cover-trains.jpg);
-    max-width: 1184px;
-}
-
-.cover__title {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    text-decoration-line: none;
-    z-index: 2;
-        color: #FFFFFF;
-    font-style: normal;
-    margin: 0 auto;
-    padding: 245px 312px 0;
-    max-width: 560px;
-
-}
-
-.cover__subtitle {
-    display: flex;
-    text-align: center;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    z-index: 3;
-    color: #FFFFFF;
-    font-style: normal;
-    margin: 0 auto;
-    padding: 32px 0 245px;
-    max-width: 360px;
-
-}
-
-.cover__link {
-    background-size: cover;
-    position: relative;
-    text-decoration-line: none;
-    z-index: 1;
-    transition: filter .25s ease-out;
-
-}
-
-.cover__link::before {
-    content: "";
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: .3;
-    transition: all .4s ease-out;
-    background-color: rgba(42, 44, 47, .8);
-}
-
-
-
-.cover__link:hover::before {
-    z-index: 1;
-    opacity: .8;
-    cursor: pointer;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 92px;
-    max-width: calc(100% - 96px);
-    margin: 0 48px 24px;
-}
-
-.footer__link {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
-.footer__link:hover {
-    opacity: .8;
-    cursor: pointer;
-}
-
-
-.footer__links {
-    display: flex;
-    column-gap: 18px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-
-.footer__copyright {
-    margin: 0;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-
-}
+/* (desktop first) - max-width, располагать в обратном порядке  */
+/*проверка*/
