--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,13 +1,13 @@
 .header__lang-link {
     font-size: 24px;
     line-height: 28px;
-    text-decoration-line: underline;
+    text-decoration: none;
     color: #FFFFFF;
     font-style: normal;
 }
 
 @media screen and (max-width: 767px) {
-    .header__lang-item {
+    .header__lang-link {
         font-size: 18px;
         line-height: 20px;
     }
@@ -15,5 +15,4 @@
 
 .header__lang-link:nth-of-type(2n) {
     margin-right: 0;
-    text-decoration-line: none;
 }
