--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,7 +6,9 @@
     font-style: normal;
     line-height: 162%;
 }
-
+.place__paragraph:last-of-type {
+    margin-bottom: 0;
+  }
 @media screen and (max-width: 767px) {
     .place__paragraph {
         padding: 0 16px;
