--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,6 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts/fonts.css");
 @import url("../blocks/body/body.css");
-@import url("../blocks/wrapper/wrapper.css");
 @import url("../blocks/page/page.css");
 @import url("../blocks/section/section.css");
 @import url("../blocks/section/__title/section__title.css");
@@ -10,6 +9,7 @@
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/header/__lang-links/header__lang-links.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
+@import url("../blocks/header/__lang-link/_current/header__lang-link_current.css");
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
