--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url("../vendor/fonts/fonts.css");
 @import url("../blocks/body/body.css");
 @import url("../blocks/page/page.css");
+@import url("../blocks/content/content.css");
 @import url("../blocks/section/section.css");
 @import url("../blocks/section/__title/section__title.css");
 @import url("../blocks/section/__subtitle/section__subtitle.css");
@@ -14,18 +15,16 @@
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
 @import url("../blocks/lead/__image/lead__image.css");
+@import url("../blocks/lead/__picture/lead__picture.css");
 @import url("../blocks/lead/__caption/lead__caption.css");
 @import url("../blocks/intro/intro.css");
-@import url("../blocks/intro/__wrapper/intro__wrapper.css");
 @import url("../blocks/intro/__title/intro__title.css");
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__catalog/intro__catalog.css");
-@import url("../blocks/intro/__catalog-item/intro__catalog-item.css");
-@import url("../blocks/intro/__number/intro__number.css");
 @import url("../blocks/photo-grid/photo-grid.css");
-@import url("../blocks/photo-grid/__catalog/photo-grid__catalog.css");
 @import url("../blocks/photo-grid/__item/photo-grid__item.css");
 @import url("../blocks/places/places.css");
+@import url("../blocks/places/__catalog/places__catalog.css");
 @import url("../blocks/place/place.css");
 @import url("../blocks/place/__title/place__title.css");
 @import url("../blocks/place/__website/place__website.css");
