--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -43,20 +43,25 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-@media screen and (max-width: 767px) {
-    .cover__link {
-        min-height: 200px;
-    }
-}
 
-@media screen and (max-width: 1023px) {
+  @media screen and (min-width: 1024px) and (max-width: 1079px) {
     .cover__link {
-        min-height: 480px;
+      min-height: 640px;
+      margin-top: 60px;
     }
-}
-
-@media screen and (max-width: 1279px) {
+  }
+  
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
     .cover__link {
-        min-height: 640px;
+      min-height: 480px;
+      margin-top: 90px;
     }
-}
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .cover__link {
+      min-height: 200px;
+      gap: 16px;
+      margin-top: 62px;
+    }
+  }
