--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,23 +1,17 @@
 .cover__title {
     max-width: 560px;
     text-align: center;
+    justify-content: center;
     z-index: 11;
-    margin: 0;
+    margin: 0 auto;
     padding-bottom: 32px;
   }
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__title {
-        max-width: 288px;
-        font-size: 32px;
+      min-width: 288px;
+      align-items: center;
+      font-size: 32px;
       line-height: 35px;
-      padding-bottom:16px;
-      
-    }
-  }
-  
-  @media screen and (max-width: 1023px) {
-    .cover__title {
-      padding-bottom:24px;
     }
   }
   
