--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,22 +1,10 @@
 .cover {
-    width: 100%;
-    padding-top: 92px;
+    height: 100%;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .cover {
-        padding-top: 66px;
-    }
-}
-
-@media screen and (max-width: 1023px) {
-    .cover {
-        padding-top: 90px;
-    }
-}
-
-@media screen and (max-width: 1279px) {
-    .cover {
-        padding: 92px 0 0;
+        margin-top: 62px;
     }
 }
