--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,9 @@
     font-size: 14px;
     line-height: 20px;
 }
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer__copyright {
+      line-height: 14px;
+      margin-top: 48px;
+    }
+  }
