--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,10 +7,18 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .footer__link {
-        font-size: 24px;
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer__link {
         line-height: 24px;
+        font-size: 24px;
+        padding: 0;
     }
 }
 
