--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,3 +5,11 @@
     padding: 0;
     list-style: none;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer__links {
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 32px;
+    }
+}
