--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,13 +6,17 @@
     font-style: normal;
 }
 
-@media screen and (max-width: 767px) {
-    .header__lang-link {
-        font-size: 18px;
-        line-height: 20px;
-    }
+
+
+.header__lang-link:last-child {
+    margin-right: 0;
 }
 
-.header__lang-link:nth-of-type(2n) {
-    margin-right: 0;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__lang-link {
+        line-height: 20px;
+        font-size: 18px;
+        margin-top: 30px;
+        margin-right: 16px;
+    }
 }
