--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -13,3 +13,15 @@
     opacity: .8;
     cursor: pointer;
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .header__lang-links {
+      margin-right: 24px;
+    }
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__lang-links {
+      padding-left: 0px;
+      margin-right: 16px;
+    }
+  }
