--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,20 @@
     width: 100%;
     justify-content: space-between;
 }
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .header {
+      max-width: 928px;
+    }
+  }
+  
+  @media screen and (min-width: 769px) and (max-width: 1023px) {
+    .header {
+      max-width: 720px;
+    }
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 768px) {
+    .header {
+      min-width: 316px;
+    }
+  }
