--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,22 +1,16 @@
 .intro__title {
+    max-width: 690px;
     font-size: 54px;
     line-height: 58px;
     text-align: left;
     color: #FFFFFF;
     margin: 0;
-    padding-top: 92px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .intro__title {
-        font-size: 32px;
         line-height: 35px;
-        padding-top: 64px;
+        font-size: 32px;
     }
 }
 
-@media screen and (max-width: 1023px) {
-    .intro__title {
-        padding-top: 88px;
-    }
-}
