--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,10 +1,26 @@
 .intro {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    max-width: 690px;
+    padding: 92px 0 0 148px;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 320px) {
     .intro {
-        padding: 0 148px;
+      padding: 62px 16px 0 16px;
     }
-}
+  }
+  
+  @media screen and (min-width: 768px) {
+    .intro {
+      padding: 88px 24px 0 24px;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .intro {
+      padding: 92px 0 0 48px;
+    }
+  }
+  
+  
