--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -11,14 +11,22 @@
     letter-spacing: 1.5px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .lead__caption {
-        padding-left: 16px;
+      padding-left: 16px;
     }
-}
-
-@media screen and (max-width: 1023px) {
+  }
+  
+  @media screen and (min-width: 768px) {
     .lead__caption {
-        padding-left: 24px;
+      padding-left: 24px;
     }
-}
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .lead__caption {
+      padding-left: 0;
+    }
+  }
+  
+  
