--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,15 +1,30 @@
 .lead__subtitle {
     color: #FFFFFF;
     max-width: 640px;
-    padding-top: 32px;
+    width: 100%;
     margin: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .lead__subtitle {
-        max-width: 288px;
-        padding-top: 16px;
-        font-size: 16px;
         line-height: 20px;
+        font-size: 16px;
+        padding: 16px 0 0 0;
+    }
+}
+
+@media screen and (min-width: 425px) {
+    .lead__subtitle {
+        line-height: 28px;
+        font-size: 22px;
+        padding: 25px 0 0 0;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .lead__subtitle {
+        line-height: 36px;
+        font-size: 30px;
+        padding: 32px 0 0 0;
     }
 }
