--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,22 +3,29 @@
     line-height: 100px;
     text-align: center;
     color: #FFFFFF;
-    margin: 0 auto;
-    padding-top: 53px;
+    margin: 0;
     max-width: 720px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .lead__title {
-        font-size: 40px;
         line-height: 44px;
-        max-width: 288px;
-
+        font-size: 40px;
+        padding: 0 16px 0 16px;
     }
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (min-width: 425px) {
     .lead__title {
-        padding-top: 45px;
+        line-height: 55px;
+        font-size: 55px;
+        padding: 0 30px 0 30px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .lead__title {
+        line-height: 100px;
+        padding: 0 24px 0 24px;
     }
 }
