--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,17 +1,13 @@
 .lead {
+    max-width: 984px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
     .lead {
-        padding: 0;
+      padding: 0 48px 0 48px;
     }
-}
-
-@media screen and (min-width: 1280px) {
-    .lead {
-        padding: 0 148px;
-    }
-}
+  }
