--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,11 +1,8 @@
 .page {
     box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     max-width: 1280px;
-    padding: 28px 0 24px;
     margin: 0 auto;
+    padding: 0;
     color: #FFFFFF;
     font-family: 'Inter', Arial, sans-serif;
     text-rendering: optimizeLegibility;
@@ -14,16 +11,4 @@
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-}
-
-@media screen and (max-width: 767px) {
-    .page {
-        padding: 16px 0 24px;
-    }
-}
-
-@media screen and (max-width: 1023px) {
-    .page {
-        padding: 28px 0 24px;
-    }
 }
