--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,16 +1,34 @@
 .photo-grid {
-    max-width: 100%;
-    padding-top: 92px;
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+    max-width: 1184px;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .photo-grid {
-        padding-top: 64px;
+        row-gap: 12px;
+        padding: 62px 16px 0 16px;
     }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 425px) {
     .photo-grid {
-        padding-top: 88px;
+        gap: 16px 16px;
+        padding: 88px 24px 0 24px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .photo-grid {
+        gap: 14px 14px;
+        padding: 92px 48px 0 48px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .photo-grid {
+        gap: 16px 16px;
     }
 }
