--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,15 +9,10 @@
 .place__paragraph:last-of-type {
     margin-bottom: 0;
   }
-@media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     .place__paragraph {
-        padding: 0 16px;
+      font-size: 16px;
     }
-}
-
-@media screen and (max-width: 1023px) {
-    .place__paragraph {
-        font-size: 16px;
-        margin-bottom: 25px;
-    }
-}
+  }
+  
+ 
