--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -6,3 +6,14 @@
     font-style: normal;
     align-self: start;
 }
+@media screen and (min-width: 320px) {
+    .place__paragraphs {
+      padding: 0 16px;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .place__paragraphs {
+      padding: 0;
+    }
+  }
