--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,13 +1,17 @@
 .place__website {
     display: flex;
     justify-content: end;
-    align-items: flex-start;
     flex-direction: column;
-    row-gap: 12px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .place__website {
-        padding: 0 16px;
+      padding: 0 16px;
     }
-}
+  }
+  
+  @media screen and (min-width: 768px) {
+    .place__website {
+      padding: 0;
+    }
+  }
