--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,21 +1,35 @@
 .place {
     display: grid;
-    grid-template-columns: 460px 1fr;
-    column-gap: 40px;
-    row-gap: 40px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .place {
-        grid-template-columns: 100%;
-        row-gap: 32px;
+      grid-template-columns: 1fr;
+      gap: 32px;
+      margin-bottom: 50px;
     }
-}
-
-@media screen and (max-width: 1279px) {
+  }
+  
+  @media screen and (min-width: 768px) {
     .place {
-        width: 100%;
-        grid-template-columns: 48% 49%;
-        column-gap: 3%;
+      grid-template-columns: 340px auto;
+      gap: 48px 28px;
+      margin-bottom: 73px;
     }
-}
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .place {
+      grid-template-columns: 440px auto;
+      gap: 48px 32px;
+      margin-bottom: 80px;
+    }
+  }
+  
+  @media screen and (min-width: 1280px) {
+    .place {
+      grid-template-columns: 460px auto;
+      gap: 48px 40px;
+      margin-bottom: 80px;
+    }
+  }
