--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -8,9 +8,9 @@
     background-position: center;
     background-image: url("../../../images/cover-trains.jpg");
     box-sizing: border-box;
-    min-height: 740px;
     position: relative;
     width: 100%;
+    height: 100%;
     color: #FFFFFF;
     text-decoration-line: none;
     z-index: 0;
@@ -44,24 +44,33 @@
 }
 
 
-  @media screen and (min-width: 1024px) and (max-width: 1079px) {
-    .cover__link {
-      min-height: 640px;
-      margin-top: 60px;
-    }
-  }
   
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cover__link {
-      min-height: 480px;
-      margin-top: 90px;
-    }
+@media screen and (min-width: 320px) {
+  .cover__link{
+    height: 200px;
   }
-  
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    .cover__link {
-      min-height: 200px;
-      gap: 16px;
-      margin-top: 62px;
-    }
+}
+
+@media screen and (min-width: 425px) {
+  .cover__link {
+    height: 300px;
   }
+}
+
+@media screen and (min-width: 768px) {
+  .cover__link {
+    height: 480px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__link {
+    height: 640px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__link {
+    height: 740px;
+  }
+}
