--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,16 +1,25 @@
 .cover__subtitle {
+    text-align: center;
     font-size: 18px;
+    font-weight: 400;
     line-height: 22px;
     z-index: 11;
     color: #FFFFFF;
     margin: 0;
-    max-width: 360px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .cover__subtitle {
-        max-width: 288px;
         line-height: 16px;
         font-size: 14px;
+        padding: 16px 16px 0 16px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cover__subtitle {
+        line-height: 22px;
+        font-size: 18px;
+        padding: 32px 0 0 0;
     }
 }
