--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,17 +1,26 @@
 .cover__title {
-    max-width: 560px;
     text-align: center;
-    justify-content: center;
     z-index: 11;
     margin: 0 auto;
-    padding-bottom: 32px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 76px;
   }
-  @media screen and (min-width: 320px) and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     .cover__title {
-      min-width: 288px;
-      align-items: center;
-      font-size: 32px;
       line-height: 35px;
+      font-size: 32px;
+      max-width: 250px;
+  
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .cover__title {
+      line-height: 76px;
+      font-size: 72px;
+      max-width: 560px;
     }
   }
   
