--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,29 @@
 .cover {
-    height: 100%;
+    max-width: 1184px;
     margin: 0 auto;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .cover {
-        margin-top: 62px;
+      padding: 66px 0 0 0;
     }
-}
+  }
+  
+  @media screen and (min-width: 768px) {
+    .cover {
+      padding: 90px 0 0 0;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .cover {
+      padding: 92px 0 0 0;
+    }
+  }
+  
+  @media screen and (min-width: 1280px) {
+    .cover {
+      padding: 92px 48px 0 48px;
+    }
+  }
+  
