--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,11 +3,20 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 16px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .footer__copyright {
-      line-height: 14px;
-      margin-top: 48px;
-    }
+@media screen and (min-width: 320px) {
+  .footer__copyright {
+    line-height: 14px;
+    font-size: 14px;
+    padding-top: 48px;
   }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__copyright {
+    line-height: 16px;
+    font-size: 14px;
+    padding-top: 0;
+  }
+}
