--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,4 +1,5 @@
 .footer__link {
+    display: flex;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -7,18 +8,29 @@
     color: #FFFFFF;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .footer__link {
-        display: flex;
-        align-items: flex-end;
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .footer__link {
         line-height: 24px;
         font-size: 24px;
-        padding: 0;
+        padding-top: 32px;
+        padding-left: 0;
+    }
+
+    .footer__link:first-of-type {
+        padding-top: 0;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer__link {
+        line-height: 18px;
+        font-size: 16px;
+        padding-top: 0;
+        padding-left: 18px;
+    }
+
+    .footer__link:first-of-type {
+        padding-left: 0;
     }
 }
 
