--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,15 +1,20 @@
 .footer__links {
     display: flex;
-    column-gap: 18px;
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .footer__links {
-        align-items: flex-start;
+        align-items: start;
+        justify-content: start;
         flex-direction: column;
-        gap: 32px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer__links {
+        flex-direction: row;
     }
 }
