--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,7 @@
 .header__lang-link {
     font-size: 24px;
     line-height: 28px;
+    font-weight: 400;
     text-decoration: none;
     color: #FFFFFF;
     font-style: normal;
@@ -12,11 +13,17 @@
     margin-right: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .header__lang-link {
-        line-height: 20px;
-        font-size: 18px;
-        margin-top: 30px;
-        margin-right: 16px;
+      font-size: 18px;
+      line-height: 20px;
     }
-}
+  }
+  
+  @media screen and (min-width: 768px) {
+    .header__lang-link {
+      font-size: 24px;
+      line-height: 28px;
+    }
+  }
+  
