--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -2,8 +2,7 @@
     display: flex;
     margin: 0;
     padding: 0;
-    padding-bottom: 7px;
-    align-items: flex-end;
+    list-style-type: none;
     column-gap: 18px;
     opacity: 1;
     transition: opacity .25s ease-out;
@@ -13,15 +12,3 @@
     opacity: .8;
     cursor: pointer;
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .header__lang-links {
-      margin-right: 24px;
-    }
-  }
-  
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    .header__lang-links {
-      padding-left: 0px;
-      margin-right: 16px;
-    }
-  }
