--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,22 @@
 .header__logo {
     max-width: 176px;
-    height: 52px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .header__logo {
-        max-width: 142px;
+      max-width: 142px;
     }
-}
+  }
+  
+  @media screen and (min-width: 425px) {
+    .header__logo {
+      max-width: 156px;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .header__logo {
+      max-width: 176px;
+    }
+  }
+  
