--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,24 +1,29 @@
 .header {
     display: flex;
     align-items: flex-end;
-    max-width: 100%;
-    width: 100%;
+    max-width: 1184px;
     justify-content: space-between;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .header {
-      max-width: 928px;
-    }
+@media screen and (min-width: 320px) {
+  .header {
+    padding: 16px 16px 0 16px;
   }
-  
-  @media screen and (min-width: 769px) and (max-width: 1023px) {
-    .header {
-      max-width: 720px;
-    }
+}
+
+@media screen and (min-width: 425px) {
+  .header {
+    padding: 20px 20px 0 20px;
   }
-  
-  @media screen and (min-width: 320px) and (max-width: 768px) {
-    .header {
-      min-width: 316px;
-    }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 28px 24px 0 24px;
   }
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    padding: 28px 48px 0 48px;
+  }
+}
