--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -7,5 +7,12 @@
     color: #FFFFFF;
     font-style: normal;
     margin: 0;
-    padding-top: 40px;
+    padding: 40px 0 0 0;
+}
+
+@media screen and (min-width: 320px) {
+    .intro__text {
+        line-height: 162%;
+        font-size: 16px;
+    }
 }
