--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,9 +2,9 @@
     max-width: 690px;
     font-size: 54px;
     line-height: 58px;
-    text-align: left;
     color: #FFFFFF;
     margin: 0;
+    font-weight: 900;
 }
 
 @media screen and (min-width: 320px) {
@@ -14,3 +14,9 @@
     }
 }
 
+@media screen and (min-width: 768px) {
+    .intro__title {
+        line-height: 58px;
+        font-size: 54px;
+    }
+}
