--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,8 +1,12 @@
 .lead__subtitle {
+    text-align: center;
     color: #FFFFFF;
     max-width: 640px;
     width: 100%;
     margin: 0;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
 }
 
 @media screen and (min-width: 320px) {
