--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,18 +1,27 @@
 .place__paragraph {
     margin: 0;
-    margin-bottom: 26px;
+    line-height: 162%;
     font-weight: 400;
     font-size: 18px;
+    color: white;
     font-style: normal;
     line-height: 162%;
+    padding-top: 26px;
 }
-.place__paragraph:last-of-type {
-    margin-bottom: 0;
+.place__paragraph:first-of-type {
+    padding-top: 0;
   }
   @media screen and (min-width: 320px) {
     .place__paragraph {
+      line-height: 162%;
       font-size: 16px;
     }
   }
   
+  @media screen and (min-width: 1024px) {
+    .place__paragraph {
+      line-height: 162%;
+      font-size: 18px;
+    }
+  }
  
