--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,19 +1,16 @@
 .place__paragraphs {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 163%;
-    color: #FFFFFF;
-    font-style: normal;
-    align-self: start;
+  display: flex;
+  flex-direction: column;
 }
+
 @media screen and (min-width: 320px) {
-    .place__paragraphs {
-      padding: 0 16px;
-    }
+  .place__paragraphs {
+    padding: 0 16px;
   }
-  
-  @media screen and (min-width: 768px) {
-    .place__paragraphs {
-      padding: 0;
-    }
+}
+
+@media screen and (min-width: 768px) {
+  .place__paragraphs {
+    padding: 0;
   }
+}
