--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,10 @@
 .place__title {
     margin: 0;
     max-width: 460px;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 76px;
+    color: white;
 }
 
 @media screen and (min-width: 320px) {
