--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,9 @@
 .place {
     display: grid;
 }
-
+.place:last-of-type {
+  margin-bottom: 0;
+}
 @media screen and (min-width: 320px) {
     .place {
       grid-template-columns: 1fr;
