--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -8,6 +8,7 @@
     font-style: normal;
     margin: 0;
     padding: 40px 0 0 0;
+    outline: solid 1px red;
 }
 
 @media screen and (min-width: 320px) {
@@ -16,3 +17,8 @@
         font-size: 16px;
     }
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .intro__text {
+      max-width: 720px;
+    }
+  }
