--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,17 +6,16 @@
     margin: 0;
     max-width: 720px;
     font-weight: 900;
+    font-family: 'Inter';
+    font-style: normal;
 }
-
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 768px) {
     .lead__title {
-        line-height: 44px;
-        font-size: 40px;
-        padding: 0 16px 0 16px;
+        line-height: 100px;
+        padding: 0 24px 0 24px;
     }
 }
-
-@media screen and (min-width: 425px) {
+@media screen and (max-width: 425px) {
     .lead__title {
         line-height: 55px;
         font-size: 55px;
@@ -24,9 +23,13 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 320px) {
     .lead__title {
-        line-height: 100px;
-        padding: 0 24px 0 24px;
+        line-height: 44px;
+        font-size: 40px;
+        padding: 0 16px 0 16px;
     }
 }
+
+
+
