--- a/blocks/intro/__catalog/intro__catalog.css
+++ b/blocks/intro/__catalog/intro__catalog.css
@@ -12,7 +12,7 @@
     padding: 32px 0 0 0;
     margin: 0;
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
   .intro__catalog {
     line-height: 18px;
     font-size: 12px;
