--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,24 +1,26 @@
 .intro__text {
-    max-width: 690px;
+    width: 690px;
     width: 100%;
     font-size: 16px;
     font-weight: 400;
-    line-height: 162%;
+    line-height: 163%;
     color: #FFFFFF;
     font-style: normal;
     margin: 0;
     padding: 40px 0 0 0;
-    outline: solid 1px red;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 768px) {
     .intro__text {
-        line-height: 162%;
-        font-size: 16px;
+        width: 720px;
+        line-height: 163%;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+@media screen and (max-width: 320px) {
     .intro__text {
-      max-width: 720px;
+        font-size: 16px;
+        line-height: 163%;
+        width: 100%
     }
-  }
+}
