--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,17 +6,17 @@
     margin: 0;
     font-weight: 900;
 }
+@media screen and (max-width: 768px) {
+    .intro__title {
+        line-height: 58px;
+        font-size: 54px;
+    }
+}
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     .intro__title {
         line-height: 35px;
         font-size: 32px;
     }
 }
 
-@media screen and (min-width: 768px) {
-    .intro__title {
-        line-height: 58px;
-        font-size: 54px;
-    }
-}
